Address review: use isBlank() in blankToNull